Fri Jun 21 18:32:06 CEST 2002 <Daniel.Diaz@inria.fr>

	* added min/max to Prolog arithmetics

Thu Jun 20 15:20:43 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bugs in current_predicate and predicate_property

Mon Jun 10 14:25:52 CEST 2002 <Daniel.Diaz@inria.fr>

	* port to powerpc/Darwin (Mac OS X) - many thanks to:
          Lindsey Spratt <spratt@alum.mit.edu>
	* fix bug in Win32 GUI console (deal with edit control text limit)
	* fix bug with in-place installation procedure

Wed Apr 24 19:00:03 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix problem with portray_clause/2 using $VARNAME and $VAR
	  now portray_clause((p(Z):-p('$VARNAME'('A'),Z))) is ok

Tue Apr 23 13:13:18 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug with stream buffering (open/4 and set_stream_buffering/2)

Sat Apr 21 13:09:54 CEST 2002 <Daniel.Diaz@inria.fr>

	* add stream mirror facility (see add_stream_mirror/2)

Fri Apr 19 15:20:51 CEST 2002 <Daniel.Diaz@inria.fr>

	* improve global vars (arg. selector, automatic array, new built-ins)

Sun Apr 14 16:35:10 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix two bugs with Ctrl+C reentrency under the top-level

Thu Apr 11 20:30:16 CEST 2002 <Daniel.Diaz@inria.fr>

	* added priority/1 option to write_term to specify starting priority
	* now under the top-level, _XXX variables are not displayed

Wed Apr 10 15:04:23 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix bug in decompose_file_name/4 (tried to modify read-only string)
	* now open/4 better detects if a stream can be repositioned

Mon Apr  8 20:08:29 CEST 2002 <Daniel.Diaz@inria.fr>

	* add source reader facility (built-in) - not yet documented
	* fix current_predicate bug, now current_predicate(nl/0) fails
	
Fri Apr  5 12:32:26 CEST 2002 <Daniel.Diaz@inria.fr>

	* fix linedit bug in tab pasting and add Esc-Tab function
	* now linedit goes to EOL at CR to fix bug with multi-line inputs
	* now linedit avoids to put in history 2 same consecutive lines
	* remove max_stream limitation (the Prolog flag no longer exists)