@@ -1,3 +1,11 @@
+Change in GNU Prolog version 1.2.15:
+
+* fix bug in output to constant terms (e.g. write_to_atom/2)
+* include another additional patch for sockets under win32 - due to:
+  Brent Fulgham <brent.fulgham@xpsystems.com>
+* fix bug in bagof/3 with FD variables
+* fix bug with randomize/0
+
 Change in GNU Prolog version 1.2.14:
 
 * added min/max to Prolog arithmetics
